--- a/airs/content/pages/about-us/events/burn-the-datacenter/index.adoc
+++ b/airs/content/pages/about-us/events/burn-the-datacenter/index.adoc
@@ -10,29 +10,30 @@
 
 == 1. Objective
 
-In this space we seek to socialize our beliefs
+In this space we seek to share our beliefs
 about the future of technologies, software development
-and management of development lifecycle for the next `10` years
-and hence, how to adapt the complete ecosystem,
-including our area of interest: security testing.
+and management of the development lifecycle over the next `10` years.
+We also include recommendations on how to adapt the complete ecosystem,
+particularly regarding our area of expertise: security testing.
 
 == 2. Content
 
 The fields of software development and infrastructure management
-have been typically separated into different and antagonistic worlds.
+have been typically separated into two different and antagonistic worlds.
 There is a dichotomy between the flexibility to changes
 during the development phase
 and the stability in the infrastructure.
 We have recently found misapplied concepts such as `DevOps`, `DevOps` profiles
-and companies that create `DevOps` transformation areas,
-but apart from the management area (roles, responsibilities, and processes)
+and companies that create `DevOps` transformation areas.
+The question is: Beyond the management aspects
+(roles, responsibilities and processes),
 how can these concepts be translated into a simple technical approach
 in additional spaces to the applications?
 
 In this methodological universe,
 we are losing sight of a critical need for programming languages
 scoped to infrastructure and networks,
-which has been around for more than `20` years.
+which have been around for more than `20` years.
 These languages would allow programming practices
 that have been developed for half a century
 to also apply to infrastructure development.
@@ -52,7 +53,7 @@ and how the environments can be infinite.
 
 We have given this free academic conference for a year, in:
 
-* *Large Companies:*
+* *Large companies:*
 link:https://www.avianca.com/co/es/[Avianca],
 link:https://www.grupobancolombia.com/wps/portal/personas[Bancolombia],
 link:https://www.bcp.com.bo/[Banco de Credito del Peru],
@@ -75,7 +76,7 @@ link:http://www.politecnicojic.edu.co/[Politécnico Jaime Isaza Cadavid],
 link:https://www.upb.edu.co/es/home[UPB],
 link:http://www.uniminuto.edu/[Uniminuto Bogotá]
 
-* *IT Vendor Enterprises*
+* *IT vendor enterprises:*
 link:https://www.arus.com.co/[ARUS],
 link:https://www.cadena.com.co/[Cadena],
 link:https://www.choucairtesting.com/[Choucair Testing],
@@ -91,21 +92,22 @@ link:http://novit.pe/[NovitIT Peru],
 link:https://seti.com.co/[SETI],
 link:https://www.todo1services.com/[Todo1].
 
-* *Open spaces* link:https://www.rutanmedellin.org/es/[RutaN],
+* *Open spaces:* link:https://www.rutanmedellin.org/es/[RutaN],
 link:https://www.meetup.com/es/mde-devops[MeetUp-Medellin-DevOps].
 
-We have given more than *35 conferences* with *878 assistants*
-and *an overall satisfaction of 165%*.
+We have given more than *35 conferences*
+with a total of approximately *900 participants*
+and an overall *satisfaction rate of 165%*.
 
 == 4. Where?
 
 The presentation can be hosted
 at your company's facilities or an external venue.
 
-The event can be held in Medellín with a minimum public of `20` assistants,
-one of them with at least `10` dependants.
-For other cities in Colombia, Central America, Ecuador, and Perú,
-there must be one assistant with at least `20` dependants.
+The event can be held in Medellín with a minimum of `20` participants,
+at least `10` of whom should be colleagues from one particular company.
+For other cities in Colombia and Latin America
+there must be one company which provides at least `20` of the participants.
 
 == 5. Duration
 
@@ -116,17 +118,17 @@ The conference has a duration of `2` hours
 
 [button]#link:../#when[When]#
 
-== 7. Public
+== 7. Audience
 
 The conference is suitable for both technical and managerial personnel,
 and the satisfaction rate for both profiles is equally high.
 However, if you wish to promote new changes
-and experimentation inside your company,
-considering people with power of decision is important.
+and experimentation within your company,
+it is important to include people with decision-making power.
 
-The number of attendants is set according to the limits of the workspace.
-The conference has been given in groups of `20` people
-and in auditoriums with over `80` people
+The maximum number of attendees is defined according to the venue.
+The conference has been given to groups of `20` people
+and in auditoriums with over `80` people.
 
 == 8. Speaker
 
